--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,12 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.0' apply false
     id 'io.spring.dependency-management' version '1.1.5'
+    id 'maven-publish'
 }
 
 group = 'com.booker'
 version = '0.0.3-SNAPSHOT'
+description = 'core'
 
 java {
     toolchain {
@@ -91,6 +93,22 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = group
+            artifactId = rootProject.name
+            version = version
+
+            artifact("build/libs/$rootProject.name-$version-plain.jar") {
+                extension 'jar'
+            }
+
+            from components.java
+        }
+    }
 }
 
 tasks.named('test') {
