--- a/jitpack.yml
+++ b/jitpack.yml
@@ -2,12 +2,10 @@ jdk:
   - openjdk21
 
 before_install:
-  - sdk install java 21.0.0-zulu
-  - sdk use java 21.0.0-zulu
+  - sdk install java 21.0.2-open
+  - sdk use java 21.0.2-open
+  - sdk install maven
+  - mvn -v
 
 install:
-  - make publish
-
-## Makefile script execution
-publish:
-  ./gradlew clean assemble publishToMavenLocal -xtest
+  - ./gradlew build publishToMavenLocal
