--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.booker'
-version = '0.0.17-SNAPSHOT'
+version = '0.0.18-SNAPSHOT'
 description = 'core'
 
 java {
@@ -105,4 +105,8 @@ publishing {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '-parameters'
 }
