--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.booker'
-version = '0.0.28-SNAPSHOT'
+version = '0.0.29-SNAPSHOT'
 description = 'core'
 
 java {
@@ -20,9 +20,14 @@ repositories {
     maven { url "https://jitpack.io" }
 }
 
+ext {
+    set('springCloudVersion', "2023.0.3")
+}
+
 dependencyManagement {
     imports {
         mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
 }
 
