--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.booker'
-version = '0.0.33-SNAPSHOT'
+version = '0.0.34-SNAPSHOT'
 description = 'core'
 
 java {
@@ -44,8 +44,8 @@ def springKafkaVersion = '2.9.13'
 def springRestdocsMockmvcVersion = '2.0.7.RELEASE'
 def p6spyVersion = '1.8.0'
 def nettyCodecVersion = '4.1.77.Final'
-def jsonVersion = '20220924'
-def jjwtVersion = '0.11.5'
+def jsonVersion = '20240303'
+def jjwtVersion = '0.12.6'
 def springCloudBusVersion = '3.1.2'
 
 
@@ -61,6 +61,7 @@ dependencies {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
     }
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
     implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:${eurekaClientVersion}"
     implementation "io.github.openfeign:feign-httpclient:${openfeignVersion}"
@@ -78,6 +79,13 @@ dependencies {
     implementation "org.mapstruct:mapstruct:${mapstructVersion}"
 
     implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
+    implementation "com.querydsl:querydsl-apt:${querydslVersion}"
+    implementation "com.querydsl:querydsl-core:${querydslVersion}"
+
+    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
+    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
+
     implementation "io.netty:netty-codec-http:${nettyCodecVersion}"
     implementation "com.github.gavlyukovskiy:p6spy-spring-boot-starter:${p6spyVersion}"
     
